--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue3-draggable-resizable",
+  "name": "@hae-long/vue3-draggable-resizable",
   "version": "2.0.0",
   "private": false,
   "description": "[Vue3 Component] Draggable and resizable with auto-snap alignment and guide lines",
