--- a/package.json
+++ b/package.json
@@ -1,36 +1,47 @@
 {
   "name": "@hae-long/vue3-draggable-resizable",
-  "version": "2.0.0",
+  "version": "2.1.0",
   "private": false,
   "description": "[Vue3 Component] Draggable and resizable with auto-snap alignment and guide lines",
+  "type": "module",
   "scripts": {
-    "dev": "set NODE_OPTIONS=--openssl-legacy-provider && vue-cli-service serve",
-    "build": "npm run build:lib && npm run build:dts",
-    "lint": "vue-cli-service lint",
-    "build:lib": "vue-cli-service build --target lib --name Vue3DraggableResizable src/index.ts",
-    "build:dts": "tsc src/index.ts --declaration --declarationDir typings"
+    "dev": "vite",
+    "build": "vite build && vue-tsc --declaration --emitDeclarationOnly --outDir dist/types",
+    "build:lib": "vite build",
+    "preview": "vite preview",
+    "lint": "eslint src --ext .ts,.vue",
+    "typecheck": "vue-tsc --noEmit"
   },
+  "main": "./dist/vue3-draggable-resizable.umd.cjs",
+  "module": "./dist/vue3-draggable-resizable.js",
+  "types": "./dist/types/index.d.ts",
+  "exports": {
+    ".": {
+      "types": "./dist/types/index.d.ts",
+      "import": "./dist/vue3-draggable-resizable.js",
+      "require": "./dist/vue3-draggable-resizable.umd.cjs"
+    },
+    "./style.css": "./dist/style.css"
+  },
+  "files": [
+    "dist"
+  ],
   "dependencies": {},
+  "peerDependencies": {
+    "vue": "^3.3.0"
+  },
   "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^2.33.0",
-    "@typescript-eslint/parser": "^2.33.0",
-    "@vue/babel-plugin-jsx": "^1.0.0-rc.3",
-    "@vue/cli-plugin-babel": "~4.5.0",
-    "@vue/cli-plugin-eslint": "~4.5.0",
-    "@vue/cli-plugin-router": "~4.5.0",
-    "@vue/cli-plugin-typescript": "~4.5.0",
-    "@vue/cli-plugin-vuex": "~4.5.0",
-    "@vue/cli-service": "~4.5.0",
-    "@vue/compiler-sfc": "^3.0.0",
-    "@vue/eslint-config-typescript": "^5.0.2",
-    "babel-plugin-import": "^1.13.1",
-    "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0-0",
-    "less": "^3.0.4",
-    "less-loader": "^5.0.0",
-    "typescript": "~3.9.3",
-    "core-js": "^3.6.5",
-    "vue": "^3.0.0"
+    "@types/node": "^22.10.0",
+    "@vitejs/plugin-vue": "^5.2.1",
+    "less": "^4.2.1",
+    "typescript": "^5.6.3",
+    "vite": "^6.0.5",
+    "vite-plugin-dts": "^4.3.0",
+    "vue": "^3.5.13",
+    "vue-tsc": "^2.2.0"
+  },
+  "engines": {
+    "node": ">=22.0.0"
   },
   "license": "MIT",
   "repository": {
@@ -48,9 +59,5 @@
     "resizable",
     "drag",
     "snap-alignment"
-  ],
-  "main": "src/index.js",
-  "module": "src/index.js",
-  "unpkg": "src/index.js",
-  "typings": "typings/index.d.ts"
+  ]
 }
