--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue3-draggable-resizable-plus",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "private": false,
   "description": "[Vue3 Component] Draggable, resizable and rotatable with grid snap, spacing indicators and guide lines",
   "type": "module",
@@ -22,14 +22,13 @@
       "require": "./dist/vue3-draggable-resizable.umd.cjs"
     },
     "./style.css": {
-      "import": "./dist/vue3-draggable-resizable.css",
-      "require": "./dist/vue3-draggable-resizable.css",
-      "default": "./dist/vue3-draggable-resizable.css"
+      "import": "./dist/style.css",
+      "require": "./dist/style.css",
+      "default": "./dist/style.css"
     },
-    "./dist/style.css": "./dist/vue3-draggable-resizable.css",
-    "./dist/vue3-draggable-resizable.css": "./dist/vue3-draggable-resizable.css"
+    "./dist/style.css": "./dist/style.css"
   },
-  "style": "./dist/vue3-draggable-resizable.css",
+  "style": "./dist/style.css",
   "sideEffects": [
     "**/*.css"
   ],
